Pobieranie załączników nie tylko dla właściciela kursu